# camellia

./: .gitignore  AUTHORS  COPYING  ChangeLog  Makefile.am  README  cam_benchmark.dsp  cam_benchmark.vcproj  cam_demo.c  cam_demo.dsp  cam_demo.vcproj  cam_demo_cpp.cpp  cam_myobjects.c  cam_myobjects.dsp  cam_myobjects.rb  cam_yalefaces.c  cam_yalefaces.dsp  cam_yalefaces.rb  cam_yalefaces.vcproj  camellia.dsp  camellia.dsw  camellia.sln  camellia.vcproj  configure.in  tags  update.rb
doc/: README  camellia.dox
ext/: README  camellia-linux.gemspec  camellia-mswin32.gemspec  camellia_ruby.i  camellia_ruby_wrap.cxx  extconf.rb  install.rb  swig_ruby.dsp  swig_ruby.vcproj  test.rb
html/: examples.html  faq.html  index.html  old.html  test_capture.rb  test_color_labeling.cpp  test_color_labeling.html  test_color_labeling.rb  test_color_labeling_cpp.html  test_labeling.cpp  test_labeling.html  test_labeling.rb  test_labeling_cpp.html  test_mask.cpp  test_mask.html  test_mask.rb  test_mask_cpp.html
html/images/: Thumbs.db
html/tools/: c2html.rb  java2html.rb  rb2html-sub.rb  rb2html.rb
inc/: cam_capture.h  camellia.h  camellia_internals.h
lib/: camellia-fox.rb  strmbase.lib
papers/: dilation.lyx
papers/benchmark/: bench_myobjects.rb  (+4 more)
resources/: CamelliaLib.odp  camellia.psd  chess.pgm  download.psd  lsun.pgm  lsun_32x64e20-bord.pgm  lsun_48x80e20.pgm  lsun_56x88e20.pgm  small_ulp.pgm
src/: Makefile.am  cam_3d.c  cam_3d_code.c  cam_LUT.c  cam_LUT_code.c  cam_ME.c  cam_RLE_labelling.c  cam_RLE_labelling_code.c  cam_RLE_labelling_table1.c  cam_RLE_labelling_table2.c  cam_RLE_morpho.c  cam_RLE_utils.c  cam_SAD.c  cam_arithmetics.c  cam_arithmetics_code.c  cam_benchmark.c  cam_blob_analysis.c  cam_capture.cpp  cam_draw.c  cam_draw_code.c  cam_error.c  cam_harris.c  cam_histogram.c  cam_hls.c  cam_hls_hypot_code.c  cam_hls_phasearg_code.c  cam_hls_sqrt_code.c  cam_hough.c  cam_hvsumming.c  cam_integralimage.c  cam_io.c  cam_keypoints.c  cam_keypoints_matching.c  cam_keypoints_sectors_code.c  cam_labelling.c  cam_linear_filtering.c  cam_linear_filtering_code.c  cam_measures.c  cam_measures_code.c  cam_median_filtering.c  (+16 more)
test/: test_all.rb  test_arithm.rb  test_capture.rb  test_color_labeling.rb  test_copy.rb  test_draw.rb  test_fixed_filters.rb  test_fox.rb  test_fox2.rb  test_helper.rb  test_histogram.rb  test_hough.rb  test_keypoints.rb  test_labeling.rb  test_mask.rb  test_warping.rb  test_watershed.rb  ts_camellia.rb
(+163 files in other folders)
