AC_INIT(src/camellia.cpp)
AM_INIT_AUTOMAKE(CamelliaLib, 2.7.0)
AC_CONFIG_HEADER(inc/config.h)
AM_PROG_LIBTOOL

AC_PROG_INSTALL

AC_ARG_ENABLE(gcov, [  --enable-gcov    allow test coverage [default=no]], enable_gcov=$enableval, enable_gcov=no)
if test "$enable_gcov" = "yes"; then
   CFLAGS="-g -fprofile-arcs -ftest-coverage"
   LDFLAGS="-lgcov"
fi

AC_ARG_ENABLE(gprof, [  --enable-gprof   allow profiling [default=no]], enable_gprof=$enableval, enable_gprof=no)
if test "$enable_gprof" = "yes"; then
   CFLAGS=${CFLAGS}" -pg"
   LDFLAGS=${LDFLAGS}" -pg"
fi

AC_ARG_ENABLE(simd, [  --enable-simd    allow vectorization using SIMD instructions [default=no]], enable_simd=$enableval, enable_simd=no)
if test "$enable_simd" = "yes"; then
   CFLAGS=${CFLAGS}" -O3 -march=nocona -mfpmath=sse -mmmx -msse -msse2 -msse3"
fi

AC_LANG_C
AC_PROG_CC
AC_PROG_MAKE_SET

AC_HEADER_STDC
AC_CHECK_HEADERS(linux/videodev.h)
AC_CHECK_LIB(m, sqrt)

AC_OUTPUT(Makefile src/Makefile)
